# glyph

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-publish.yml
examples/: basic_usage.py
src/: __init__.py  bits.py  decoder.py  encoder.py  main.py  renderer.py  shapes.py  tree.py
tests/: test_api.py  test_bits.py  test_decoder.py  test_encoder.py  test_renderer.py  test_shapes.py
